--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "16.17.0"
+    "node": "16.17.0",
+    "npm": "8.19.0"
   },
   "scripts": {
     "dev": "next dev",
